// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can change card color 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 1,
        "marginBottom": 12,
      },
      Object {
        "borderColor": "red",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 12,
        },
        Object {
          "backgroundColor": "red",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 18,
            "fontWeight": "600",
          },
          Object {
            "color": "#fff",
          },
        ]
      }
    >
      Basic Card
    </Text>
  </View>
  <View
    style={
      Object {
        "padding": 12,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Basic example 1
    </Text>
  </View>
</View>
`;

exports[`Can change title text color 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderWidth": 1,
        "marginBottom": 12,
      },
      Object {
        "borderColor": "#333",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 12,
        },
        Object {
          "backgroundColor": "#333",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 18,
            "fontWeight": "600",
          },
          Object {
            "color": "red",
          },
        ]
      }
    >
      Basic Card
    </Text>
  </View>
  <View
    style={
      Object {
        "padding": 12,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Basic example 1
    </Text>
  </View>
</View>
`;
